# Handwerk-Hamburg

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/static/: map.js  style.css
app/templates/: index.html
data/: __init__.py
data/etl/: __init__.py  build_plz_einwohner_from_stadtteil.py  config.py  fetch_elektriker_org.py  fetch_hamburg_plz_data.py  fetch_overpass.py  load_plz.py  run_etl.py  score_white_spot.py  stadtteil_from_osm.py
data/processed/: electricians.json  geocode_cache.json  hamburg_boundary.geojson  pipeline_metadata.json  white_spot_electrician.geojson
data/raw/: BUEW25HH_Strassenverzeichnis.xlsx  elektriker_org_hamburg.json  plz_einwohner.csv  plz_hamburg.geojson  plz_stadtteil.csv
notebooks/: .gitkeep
outputs/: electrician_heatmap.html  handwerk_map.html
scripts/: run_analysis.py
src/handwerk_hamburg/: __init__.py  address_analysis.py  analysis.py  cleaning.py  config.py  data_loader.py  geocoding.py  nearest.py  pipeline.py  visualization.py
tests/: __init__.py  conftest.py  test_address_analysis.py  test_analysis.py  test_geocoding.py  test_pipeline.py
